--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "errorhandler": "^1.4.3",
     "express": "~4.15.5",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.14.2",
+    "http": "0.0.0",
     "morgan": "~1.9.0",
     "multiline": "^2.0.0",
-    "serve-favicon": "~2.4.5"
+    "mysql": "^2.12.0",
+    "path": "^0.12.7",
+    "serve-favicon": "~2.4.5",
+    "serve-static": "^1.11.1"
   }
 }
